--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -12,8 +12,10 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "http-errors": "^1.8.0",
     "mysql": "^2.18.1",
+    "radio-stream": "0.0.1",
     "url-metadata": "^2.5.0"
   }
 }
